--- a/diarioio/core/templates/index.html
+++ b/diarioio/core/templates/index.html
@@ -1,345 +1,27 @@
+{% extends 'base.html' %}
 {% load static %}
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="apple-touch-icon" sizes="76x76" href="{% static 'assets/img/apple-icon.png' %}">
-    <link rel="icon" type="image/png" sizes="96x96" href="{% static 'assets/img/favicon.png' %}">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Paper Dashboard PRO by Creative Tim</title>
-    <!-- Canonical SEO -->
-    <link rel="canonical" href="https://www.creative-tim.com/product/paper-dashboard-pro"/>
-    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
-    <meta name="viewport" content="width=device-width" />
-    <!--  Social tags      -->
-    <meta name="keywords" content="creative tim, html dashboard, html css dashboard, web dashboard, bootstrap dashboard, bootstrap, css3 dashboard, bootstrap admin, paper bootstrap dashboard, frontend, responsive bootstrap dashboard">
-    <meta name="description" content="Paper Dashboard PRO is a beautiful Bootstrap admin dashboard with a large number of components, designed to look neat and organised. ">
-    <!-- Schema.org markup for Google+ -->
-    <meta itemprop="name" content="Paper Dashboard PRO by Creative Tim">
-    <meta itemprop="description" content="Paper Dashboard PRO is a beautiful Bootstrap admin dashboard with a large number of components, designed to look neat and organised. If you are looking for a tool to manage and visualise data about your business, this dashboard is the thing for you.">
-    <meta itemprop="image" content="http://s3.amazonaws.com/creativetim_bucket/products/47/original/opt_pdp_thumbnail.jpg">
-    <!-- Twitter Card data -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@creativetim">
-    <meta name="twitter:title" content="Paper Dashboard PRO by Creative Tim">
-    <meta name="twitter:description" content="Paper Dashboard PRO is a beautiful Bootstrap admin dashboard with a large number of components, designed to look neat and organised.">
-    <meta name="twitter:creator" content="@creativetim">
-    <meta name="twitter:image" content="http://s3.amazonaws.com/creativetim_bucket/products/47/original/opt_pdp_thumbnail.jpg">
-    <!-- Open Graph data -->
-    <meta property="og:title" content="Paper Dashboard PRO by Creative Tim" />
-    <meta property="og:type" content="article" />
-    <meta property="og:url" content="http://demos.creative-tim.com/paper-dashboard-pro/examples/dashboard/overview.html" />
-    <meta property="og:image" content="http://s3.amazonaws.com/creativetim_bucket/products/47/original/opt_pdp_thumbnail.jpg"/>
-    <meta property="og:description" content="Paper Dashboard PRO is a beautiful Bootstrap admin dashboard with a large number of components, designed to look neat and organised." />
-    <meta property="og:site_name" content="Creative Tim" />
-    <!-- Bootstrap core CSS     -->
-    <link href="{% static 'assets/css/bootstrap.min.css' %}" rel="stylesheet" />
-    <!--  Paper Dashboard core CSS    -->
-    <link href="{% static 'assets/css/paper-dashboard.css' %}" rel="stylesheet"/>
-    <!--  CSS for Demo Purpose, don't include it in your project     -->
-    <link href="{% static 'assets/css/demo.css' %}" rel="stylesheet" />
-    <!--  Fonts and icons     -->
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Muli:400,300' rel='stylesheet' type='text/css'>
-    <link href="{% static 'assets/css/themify-icons.css' %}" rel="stylesheet">
-  </head>
-  <body>
-    <div class="wrapper">
-      <div class="sidebar" data-background-color="brown" data-active-color="danger">
-        <!--
-          Tip 1: you can change the color of the sidebar's background using: data-background-color="white | brown"
-          Tip 2: you can change the color of the active button using the data-active-color="primary | info | success | warning | danger"
-          -->
-        <div class="logo">
-          <a href="http://www.creative-tim.com" class="simple-text">
-          Creative Tim
-          </a>
-        </div>
-        <div class="logo logo-mini">
-          <a href="http://www.creative-tim.com" class="simple-text">
-          Ct
-          </a>
-        </div>
-        <div class="sidebar-wrapper">
-          <div class="user">
-            <div class="photo">
-              <img src="{% static 'assets/img/faces/face-2.jpg' %}" />
-            </div>
-            <div class="info">
-              <a data-toggle="collapse" href="#collapseExample" class="collapsed">
-              Chet Faker
-              <b class="caret"></b>
-              </a>
-              <div class="collapse" id="collapseExample">
-                <ul class="nav">
-                  <li><a href="#profile">My Profile</a></li>
-                  <li><a href="#editprofile">Edit Profile</a></li>
-                  <li><a href="#settings">Settings</a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <ul class="nav">
-            <li class="active">
-              <a data-toggle="collapse" href="#dashboardOverview" aria-expanded="true">
-                <i class="ti-panel"></i>
-                <p>Dashboard
-                  <b class="caret"></b>
-                </p>
-              </a>
-              <div class="collapse in" id="dashboardOverview">
-                <ul class="nav">
-                  <li class="active"><a href="overview.html">Overview</a></li>
-                  <li><a href="stats.html">Stats</a></li>
-                </ul>
-              </div>
-            </li>
-            <li>
-              <a data-toggle="collapse" href="#componentsExamples">
-                <i class="ti-package"></i>
-                <p>Components
-                  <b class="caret"></b>
-                </p>
-              </a>
-              <div class="collapse" id="componentsExamples">
-                <ul class="nav">
-                  <li><a href="../components/buttons.html">Buttons</a></li>
-                  <li><a href="../components/grid.html">Grid System</a></li>
-                  <li><a href="../components/panels.html">Panels</a></li>
-                  <li><a href="../components/sweet-alert.html">Sweet Alert</a></li>
-                  <li><a href="../components/notifications.html">Notifications</a></li>
-                  <li><a href="../components/icons.html">Icons</a></li>
-                  <li><a href="../components/typography.html">Typography</a></li>
-                </ul>
-              </div>
-            </li>
-            <li>
-              <a data-toggle="collapse" href="#formsExamples">
-                <i class="ti-clipboard"></i>
-                <p>
-                  Forms
-                  <b class="caret"></b>
-                </p>
-              </a>
-              <div class="collapse" id="formsExamples">
-                <ul class="nav">
-                  <li><a href="../forms/regular.html">Regular Forms</a></li>
-                  <li><a href="../forms/extended.html">Extended Forms</a></li>
-                  <li><a href="../forms/validation.html">Validation Forms</a></li>
-                  <li><a href="../forms/wizard.html">Wizard</a></li>
-                </ul>
-              </div>
-            </li>
-            <li>
-              <a data-toggle="collapse" href="#tablesExamples">
-                <i class="ti-view-list-alt"></i>
-                <p>
-                  Table list
-                  <b class="caret"></b>
-                </p>
-              </a>
-              <div class="collapse" id="tablesExamples">
-                <ul class="nav">
-                  <li><a href="../tables/regular.html">Regular Tables</a></li>
-                  <li><a href="../tables/extended.html">Extended Tables</a></li>
-                  <li><a href="../tables/bootstrap-table.html">Bootstrap Table</a></li>
-                  <li><a href="../tables/datatables.net.html">DataTables.net</a></li>
-                </ul>
-              </div>
-            </li>
-            <li>
-              <a data-toggle="collapse" href="#mapsExamples">
-                <i class="ti-map"></i>
-                <p>
-                  Maps
-                  <b class="caret"></b>
-                </p>
-              </a>
-              <div class="collapse" id="mapsExamples">
-                <ul class="nav-second-level nav">
-                  <li><a href="../maps/google.html">Google Maps</a></li>
-                  <li><a href="../maps/vector.html">Vector Maps</a></li>
-                  <li><a href="../maps/fullscreen.html">Full Screen Map</a></li>
-                </ul>
-              </div>
-            </li>
-            <li>
-              <a href="../charts.html">
-                <i class="ti-bar-chart-alt"></i>
-                <p>Charts</p>
-              </a>
-            </li>
-            <li>
-              <a href="../calendar.html">
-                <i class="ti-calendar"></i>
-                <p>Calendar</p>
-              </a>
-            </li>
-            <li>
-              <a data-toggle="collapse" href="#pagesExamples">
-                <i class="ti-gift"></i>
-                <p>
-                  Pages
-                  <b class="caret"></b>
-                </p>
-              </a>
-              <div class="collapse" id="pagesExamples">
-                <ul class="nav-second-level nav">
-                  <li><a href="../pages/timeline.html">Timeline Page</a></li>
-                  <li><a href="../pages/user.html">User Page</a></li>
-                  <li><a href="../pages/login.html">Login Page</a></li>
-                  <li><a href="../pages/register.html">Register Page</a></li>
-                  <li><a href="../pages/lock.html">Lock Screen Page</a></li>
-                </ul>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="main-panel">
-        <nav class="navbar navbar-default">
-          <div class="container-fluid">
-            <div class="navbar-minimize">
-              <button id="minimizeSidebar" class="btn btn-fill btn-icon"><i class="ti-more-alt"></i></button>
-            </div>
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar bar1"></span>
-              <span class="icon-bar bar2"></span>
-              <span class="icon-bar bar3"></span>
-              </button>
-              <a class="navbar-brand" href="#Dashboard">
-              Overview
-              </a>
-            </div>
-            <div class="collapse navbar-collapse">
-              <form class="navbar-form navbar-left navbar-search-form" role="search">
-                <div class="input-group">
-                  <span class="input-group-addon"><i class="fa fa-search"></i></span>
-                  <input type="text" value="" class="form-control" placeholder="Search...">
-                </div>
-              </form>
-              <ul class="nav navbar-nav navbar-right">
-                <li>
-                  <a href="#stats" class="dropdown-toggle btn-magnify" data-toggle="dropdown">
-                    <i class="ti-panel"></i>
-                    <p>Stats</p>
-                  </a>
-                </li>
-                <li class="dropdown">
-                  <a href="#notifications" class="dropdown-toggle btn-rotate" data-toggle="dropdown">
-                    <i class="ti-bell"></i>
-                    <span class="notification">5</span>
-                    <p class="hidden-md hidden-lg">
-                      Notifications
-                      <b class="caret"></b>
-                    </p>
-                  </a>
-                  <ul class="dropdown-menu">
-                    <li><a href="#not1">Notification 1</a></li>
-                    <li><a href="#not2">Notification 2</a></li>
-                    <li><a href="#not3">Notification 3</a></li>
-                    <li><a href="#not4">Notification 4</a></li>
-                    <li><a href="#another">Another notification</a></li>
-                  </ul>
-                </li>
-                <li class="dropdown">
-                  <a href="#settings" class="dropdown-toggle btn-rotate" data-toggle="dropdown">
-                    <i class="ti-settings"></i>
-                    <p class="hidden-md hidden-lg">
-                      Settings
-                      <b class="caret"></b>
-                    </p>
-                  </a>
-                  <ul class="dropdown-menu">
-                    <li><a href="#not1">Notification 1</a></li>
-                    <li><a href="#not2">Notification 2</a></li>
-                    <li><a href="#not3">Notification 3</a></li>
-                    <li><a href="#not4">Notification 4</a></li>
-                    <li><a href="{% url 'accounts:logout' %}">Sair</a></li>
-                  </ul>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-        <div class="content">
-          <div class="container-fluid">
-            #Conteúdo aqui!!!
-          </div>
-        </div>
-        <footer class="footer">
-          <div class="container-fluid">
-            <nav class="pull-left">
-              <ul>
-                <li>
-                  <a href="http://www.creative-tim.com">
-                  Creative Tim
-                  </a>
-                </li>
-                <li>
-                  <a href="http://blog.creative-tim.com">
-                  Blog
-                  </a>
-                </li>
-                <li>
-                  <a href="http://www.creative-tim.com/license">
-                  Licenses
-                  </a>
-                </li>
-              </ul>
-            </nav>
-            <div class="copyright pull-right">
-              &copy; <script>document.write(new Date().getFullYear())</script>, made with <i class="fa fa-heart heart"></i> by <a href="http://www.creative-tim.com">Creative Tim</a>
-            </div>
-          </div>
-        </footer>
+
+{% block title %}
+Diário.IO
+{% endblock title %}
+
+
+{% block addcss %}
+<link href="{% static 'assets/css/style.css' %}" rel="stylesheet"/>
+{% endblock addcss %}
+
+{% block content %}
+<div class="card fluid">
+  <div class="content">
+    <div class="row">
+      <div class="col-md-4 col-md-offset-4">
+        <h1 class="text-center big-title">Chegou?</h1>
+        <h1 class="text-center big-title">Inicie um novo diário!</h1>
       </div>
     </div>
-  </body>
-  <!--   Core JS Files. Extra: PerfectScrollbar + TouchPunch libraries inside jquery-ui.min.js   -->
-  <script src="{% static 'assets/js/jquery-1.10.2.js' %}" type="text/javascript"></script>
-  <script src="{% static 'assets/js/jquery-ui.min.js' %}" type="text/javascript"></script>
-  <script src="{% static 'assets/js/bootstrap.min.js' %}" type="text/javascript"></script>
-  <!--  Forms Validations Plugin -->
-  <script src="{% static 'assets/js/jquery.validate.min.js' %}"></script>
-  <!--  Plugin for Date Time Picker and Full Calendar Plugin-->
-  <script src="{% static 'assets/js/moment.min.js' %}"></script>
-  <!--  Date Time Picker Plugin is included in this js file -->
-  <script src="{% static 'assets/js/bootstrap-datetimepicker.js' %}"></script>
-  <!--  Select Picker Plugin -->
-  <script src="{% static 'assets/js/bootstrap-selectpicker.js' %}"></script>
-  <!--  Checkbox, Radio, Switch and Tags Input Plugins -->
-  <script src="{% static 'assets/js/bootstrap-checkbox-radio-switch-tags.js' %}"></script>
-  <!-- Circle Percentage-chart -->
-  <script src="{% static 'assets/js/jquery.easypiechart.min.js' %}"></script>
-  <!--  Charts Plugin -->
-  <script src="{% static 'assets/js/chartist.min.js' %}"></script>
-  <!--  Notifications Plugin    -->
-  <script src="{% static 'assets/js/bootstrap-notify.js' %}"></script>
-  <!-- Sweet Alert 2 plugin -->
-  <script src="{% static 'assets/js/sweetalert2.js' %}"></script>
-  <!-- Vector Map plugin -->
-  <script src="{% static 'assets/js/jquery-jvectormap.js' %}"></script>
-  <!--  Google Maps Plugin    -->
-  <script src="https://maps.googleapis.com/maps/api/js"></script>
-  <!-- Wizard Plugin    -->
-  <script src="{% static 'assets/js/jquery.bootstrap.wizard.min.js' %}"></script>
-  <!--  Bootstrap Table Plugin    -->
-  <script src="{% static 'assets/js/bootstrap-table.js' %}"></script>
-  <!--  Full Calendar Plugin    -->
-  <script src="{% static 'assets/js/fullcalendar.min.js' %}"></script>
-  <!-- Paper Dashboard PRO Core javascript and methods for Demo purpose -->
-  <script src="{% static 'assets/js/paper-dashboard.js' %}"></script>
-  <!--   Sharrre Library    -->
-  <script src="{% static 'assets/js/jquery.sharrre.js' %}"></script>
-  <!-- Paper Dashboard PRO DEMO methods, don't include it in your project! -->
-  <script src="{% static 'assets/js/demo.js' %}"></script>
-  <script type="text/javascript">
-    $(document).ready(function(){
-      demo.initOverviewDashboard();
-      demo.initCirclePercentage();
-    });
-  </script>
-</html>
+    <div class="row" style="border:solid 1px">
+
+    </div>
+  </div>
+</div>
+{% endblock content %}
