--- a/diarioio/core/templates/index.html
+++ b/diarioio/core/templates/index.html
@@ -19,9 +19,12 @@ Diário.IO
         <h1 class="text-center big-title">Inicie um novo diário!</h1>
       </div>
     </div>
-    <div class="row" style="border:solid 1px">
-
+    <div class="row bt-cheguei">
+        <button class="btn btn-lg btn-wd">Cheguei!</button>
     </div>
+  </div>
+  <div class="content">
+    
   </div>
 </div>
 {% endblock content %}
