Finaliza formulário de entrada dinâmico com java script. Finaliza criação de formulário utilizando forms do django. Inicia criação dos testes com a classe Tests do django

--- a/diarioio/core/static/assets/css/style.css
+++ b/diarioio/core/static/assets/css/style.css
@@ -14,3 +14,13 @@
 .bt-cheguei button {
   font-size: 50px;
 }
+.icone-grande {
+  width: 100px;
+}
+#divObjetivos {
+  display: none;
+}
+#objetivos .row{
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
